--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.0.1",
     "react-time-ago": "^7.3.3",
     "react-timeago": "^7.2.0",
+    "recoil": "^0.7.7",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
